--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <div class="card">
         <h3>Próximos jogos</h3>
         <img src="https://cdn.discordapp.com/attachments/1073690900867334248/1305728795239514152/abb76fa3-8eab-4154-a160-99ead469b42e.png?ex=67341634&is=6732c4b4&hm=9353c2da8eb9174329e3450aa5fff8d55d43b007f5e9317fa085ada530d48342&" alt="Imagem dos jogos de hoje" width="430">
-        <p>Confira os jogos de hoje e fique atualizado.</p>
+        <p>Confira os jogos e fique atualizado.</p>
       </div>
       <div class="card">
         <h3>Tabela</h3>
